-
Bug
-
Resolution: Done
-
P4: Low
-
5.3.0 Beta1
-
None
-
aa5ff3a9e14018f04c32ad037b1f76e9e52be156
qdoc generates the documentation for a C++ namespace in a similar way to what it does for a C++ class. However, in the namespace case, qdoc does not list member variables. Apparently no cases of this have come up before.
For Gerrit Dashboard: QTBUG-38734 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
84586,1 | qdoc: Now lists variable in namespaces | dev | qt/qtbase | Status: MERGED | +2 | 0 |